# brainblocks

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  clean.bat  clean.py  clean.sh  helper.py  install.bat  install.py  install.sh  installer.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  uninstall.bat  uninstall.py  uninstall.sh
.github/workflows/: build-test.yml  pypi-publish.yml  python-package.yml  test-pypi-publish.yml
docs/: ABOUT.md  extended_readme.md  todo.md
examples/python/: README.md
examples/python/abnormality_detection/: abnorm_blocks_hierarchy.py  abnorm_blocks_no_pooler.py  abnorm_blocks_reset_sequence.py  abnorm_blocks_symbols.py  abnorm_blocks_with_pooler.py  abnorm_template.py
examples/python/anomaly_detection/: README.md  anom.py  anom_discrete.py  anom_labels.py  anom_reset_sequence.py  anom_scalar.py  anom_template.py
examples/python/applications/: README.md  multivariate_abnormality_detection.py  multivariate_anomaly_detection.py  sklearn_style_classifier.py
examples/python/basics/: README.md
examples/python/basics/transformers/: README.md
examples/python/classification/: README.md  classf_blocks.py  classf_template.py  classif.py  classif_template.py  classifier_template.py  pattern_classifier.py
examples/python/context_learner/: README.md  context_learner.py
examples/python/encoders/: hypergrid_transform.py  scalar_encoder.py  symbols_encoder.py
examples/python/experiments/BBClassifier/: README.md  run_classifier_comparison.py  run_high_dimensional_classifier_experiments.py
examples/python/experiments/datasets/: README.md  generate_datasets.py  requirements.txt
examples/python/experiments/event_classification/: event_classification.py
examples/python/experiments/hypergrid_transform/: encode_video.sh  hypergrid_graphics.py  plot_hgt_visuals.py
examples/python/pooling/: README.md  pattern_pooler.py
examples/python/sequence_learner/: README.md  anom_hierarchy.py  anom_pooler.py  load_save_sequence_learner.py  multivariate_anomaly_detection.py  online_learning_discrete_sequence_anomalies.py  online_learning_scalar_sequence_anomalies.py  template_anomaly_detector.py  train_test_discrete_sequence_anomalies.py  train_test_scalar_sequence_anomalies.py
examples/python/transformers/: README.md  discrete_transformer.py  hypergrid_transformer.py  label_transformer.py  persistence_transformer.py  scalar_transformer.py
experiments/BBClassifier/: requirements.txt  run_classifier_comparison.py  run_classifier_experiments.py  run_high_dimensional_classifier_experiments.py
experiments/event_classification/: event_classification.py
experiments/hypergrid_transform/: README.md  requirements.txt
experiments/image_classification/: _helper.py  cifar10_hog.py  mnist_binarized.py  mnist_binarized_introspection.py  mnist_hog.py
experiments/mnist/: mnist_binarized.py  requirements.txt
experiments/scalability/: README.md  abnormality_detector_scalability.py  coincidence_detector_scalability.py  requirements.txt
experiments/sequence_learning/: sequence_learning.py
src/bbcore/: bitarray.c  bitarray.cpp  bitarray.h  bitarray.hpp  blank_block.c  blank_block.cpp  blank_block.h  blank_block.hpp  coincidence_set.c  coincidence_set.cpp  coincidence_set.h  coincidence_set.hpp  context_learner.cpp  context_learner.hpp  page.c  page.cpp  page.h  page.hpp  pattern_classifier.c  pattern_classifier.cpp  pattern_classifier.h  pattern_classifier.hpp  pattern_classifier_dynamic.cpp  pattern_classifier_dynamic.hpp  pattern_pooler.c  pattern_pooler.cpp  pattern_pooler.h  pattern_pooler.hpp  persistence_encoder.c  persistence_encoder.cpp  persistence_encoder.h  persistence_encoder.hpp  scalar_encoder.c  scalar_encoder.cpp  scalar_encoder.h  scalar_encoder.hpp  sequence_learner.c  sequence_learner.cpp  sequence_learner.h  sequence_learner.hpp  (+10 more)
src/cpp/: CMakeLists.txt  bitarray.cpp  bitarray.hpp  block.cpp  block.hpp  block_input.cpp  block_input.hpp  block_memory.cpp  block_memory.hpp  block_output.cpp  block_output.hpp  utils.hpp
src/cpp/blocks/: _template.cpp  _template.hpp  blank_block.cpp  blank_block.hpp  context_learner.cpp  context_learner.hpp  discrete_transformer.cpp  discrete_transformer.hpp  label_transformer.cpp  label_transformer.hpp  pattern_classifier.cpp  pattern_classifier.hpp  pattern_classifier_dynamic.cpp  pattern_classifier_dynamic.hpp  pattern_pooler.cpp  pattern_pooler.hpp  persistence_transformer.cpp  persistence_transformer.hpp  scalar_transformer.cpp  scalar_transformer.hpp  sequence_learner.cpp  sequence_learner.hpp
src/python/: __main__.py
src/python/blocks/: __init__.py  blocks.py
src/python/datasets/: classification.py  time_series.py
src/python/metrics/: __init__.py
src/python/templates/: __init__.py  abnormality_detection.py  anomaly_detector.py  anomaly_detector_persist.py  classification.py  classifier.py  template_helper.py
src/python/tools/: __init__.py  bbclassifier.py  hypergrid_transform.py
src/wrappers/: class_interfaces.hpp  python_bindings.cpp
tests/c/: helper.h  test.c  test_bitarray.h  test_blank_block.h  test_coincidence_set.h  test_page.h  test_pattern_classifier.h  test_pattern_pooler.h  test_persistence_encoder.h  test_scalar_encoder.h  test_sequence_learner.h  test_symbols_encoder.h
tests/cpp/: CMakeLists.txt  test.cpp  test_bitarray.cpp  test_bitarray.hpp  test_blank_block.hpp  test_block_input.cpp  test_block_memory.cpp  test_block_output.cpp  test_coincidence_set.hpp  test_context_learner.cpp  test_discrete_transformer.cpp  test_label_transformer.cpp  test_page.hpp  test_pattern_classifier.cpp  test_pattern_classifier.hpp  test_pattern_classifier_dynamic.cpp  test_pattern_classifier_dynamic.hpp  test_pattern_pooler.cpp  test_pattern_pooler.hpp  test_persistence_encoder.hpp  test_persistence_transformer.cpp  test_scalar_encoder.hpp  test_scalar_transformer.cpp  test_sequence_learner.cpp  test_sequence_learner.hpp  test_symbols_encoder.hpp  test_zOLD.cpp
tests/python/: _test_templates.py  test_blocks.py  test_templates.py  test_tools.py
(+12 files in other folders)
