[metadata]
name = brainblocks-test2
version = 0.7.1
description = BrainBlocks Toolkit
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = brainblocks, htm, classification, anomaly, abnormality, time-series, neuroscience, cognitive, distributed, representation

license = GNU Affero General Public License v3.0 only
license_files = LICENSE

classifiers =
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: C
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: GNU Affero General Public License v3

url = https://github.com/the-aerospace-corporation/brainblocks

author = Jacob Everist, David Di Giorgio
author_email = jacob.everist@gmail.com, ddigiorg@gmail.com

[options]
python_requires = >=3.6
install_requires =
    numpy >=1.18.5
    scipy >=1.5.4
    scikit-learn >=0.22.1
    #pandas >=1.1.5
    #matplotlib >=3.2.2

package_dir =
    brainblocks=src/python
packages = brainblocks, brainblocks.blocks, brainblocks.datasets, brainblocks.metrics, brainblocks.templates, brainblocks.tools

zip_safe = False
tests_require = pytest

include_package_data = True

